@@ -1,10 +1,11 @@
 package MCat::Context;
 
-use HTML::Forms::Constants qw( FALSE TRUE );
+use HTML::Forms::Constants qw( FALSE NUL TRUE );
 use HTML::Forms::Types     qw( ArrayRef Bool HashRef Str );
-use HTML::Forms::Util      qw( action_path2uri );
+use HTML::Forms::Util      qw( get_token );
 use JSON::MaybeXS          qw( encode_json );
 use List::Util             qw( pairs );
+use MCat::Util             qw( action_path2uri new_uri );
 use Ref::Util              qw( is_arrayref is_hashref );
 use Type::Utils            qw( class_type );
 use MCat::Response;
@@ -19,8 +20,18 @@ has 'messages' => is => 'lazy', isa => ArrayRef, builder => sub {
    return $self->session->collect_status_messages($self->request);
 };
 
+has 'models' => is => 'ro', isa => HashRef, weak_ref => TRUE,
+   default => sub { {} };
+
 has 'posted' => is => 'lazy', isa => Bool, builder => sub {
    my $self = shift; return lc $self->request->method eq 'post' ? TRUE : FALSE;
+};
+
+has 'preference_url' => is => 'lazy', isa => class_type('URI'), builder => sub {
+   my $self   = shift;
+   my $scheme = $self->request->scheme;
+
+   return new_uri $scheme, $self->request->base . 'api/table/*/preference';
 };
 
 has 'request' =>
@@ -42,8 +53,35 @@ has 'schema'  => is => 'lazy', isa => class_type('MCat::Schema'),
 
 has '_stash' => is => 'ro', isa => HashRef, default => sub { {} };
 
+has 'table_form_url' => is => 'lazy', isa => class_type('URI'), builder => sub {
+   my $self   = shift;
+   my $scheme = $self->request->scheme;
+
+   return new_uri $scheme, $self->request->base . 'api/table/*/action';
+};
+
+has 'views' => is => 'ro', isa => HashRef, default => sub { {} };
+
 sub model {
    my ($self, $rs_name) = @_; return $self->schema->resultset($rs_name);
+}
+
+sub preference {
+   my ($self, $name, $value) = @_;
+
+   return unless $name;
+
+   my $rs = $self->model('Preference');
+
+   return $rs->update_or_create(
+      { name => $name, value => $value }, { key => 'preference_name' }
+   ) if $value && $value ne '""';
+
+   my $pref = $rs->find({ name => $name }, { key => 'preference_name' });
+
+   return $pref unless defined $value;
+
+   return $pref->delete;
 }
 
 sub res { shift->response }
@@ -52,6 +90,8 @@ sub stash {
    my ($self, @args) = @_;
 
    return $self->_stash unless $args[0];
+
+   return $self->_stash->{$args[0]} unless $args[1];
 
    for my $pair (pairs @args) {
       $self->_stash->{$pair->key} = $pair->value;
@@ -83,7 +123,13 @@ sub uri_for_action {
    return $self->request->uri_for($uri, $args, $params);
 }
 
-sub view { TRUE }
+sub verification_token {
+   my $self = shift; return get_token(3600, NUL);
+}
+
+sub view {
+   my ($self, $view) = @_; return $self->views->{$view};
+}
 
 use namespace::autoclean;
 
