@@ -3,7 +3,7 @@ schema_class MCat::Schema
 <connect_info>
     dsn     dbi:Pg:dbname=mcat
     user    mcat
-    pass    replaceme
+    password    shit
 </connect_info>
 
 <loader_options>
