@@ -14,7 +14,11 @@
    <script src="/js/hforms-util.js"></script>
    <script src="/js/hforms-repeatable.js"></script>
    <script src="/js/hforms-toggle.js"></script>
+   <script src="/js/hstatetable-util.js"></script>
    <script src="/js/hstatetable-renderer.js"></script>
+   <script src="/js/hstatetable-role.js"></script>
+   <script src="/js/hstatetable-celltrait.js"></script>
+   <script src="/js/hstatetable-columntrait.js"></script>
 </head>
 <body id="body">
 [% content -%]
