@@ -1,3 +1,4 @@
+<h3>Music Catalog</h3>
 [% FOR message IN context.messages -%]
    <div class="messages">[% message %]</div>
 [% END -%]
